[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["diegoff <diegoff_@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
# Adicione outras dependências, exemplo:
# fastapi = "^0.110.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
