[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["diegoff <diegoff_@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
# Adicione outras dependências, exemplo:
# fastapi = "^0.110.0"
flask = "^3.1.1"
sqlalchemy = "^2.0.0" 
flask-jwt-extended = "^4.7.1"
flask-migrate = "^4.1.0"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
